--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,14 @@
 
             <dependency>
                 <groupId>${project.groupId}</groupId>
+                <artifactId>component</artifactId>
+                <classifier>tests</classifier>
+                <type>test-jar</type>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>coordinate</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -303,6 +311,12 @@
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
                 <version>${slf4j.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.activej</groupId>
+                <artifactId>activej-launchers-http</artifactId>
+                <version>${activej.version}</version>
             </dependency>
 
             <dependency>
@@ -520,90 +534,6 @@
             </plugin>
 
         </plugins>
-
-<!--        -->
-<!--        <plugins>-->
-<!--            <plugin>-->
-<!--                <groupId>org.apache.maven.plugins</groupId>-->
-<!--                <artifactId>maven-surefire-report-plugin</artifactId>-->
-<!--            </plugin>-->
-<!--            <plugin>-->
-<!--                <groupId>org.jacoco</groupId>-->
-<!--                <artifactId>jacoco-maven-plugin</artifactId>-->
-<!--                <version>${jacoco-maven-plugin.version}</version>-->
-<!--                <reportSets>-->
-<!--                    <reportSet>-->
-<!--                        <id>jacoco-report</id>-->
-<!--                        <reports>-->
-<!--                            <report>report</report>-->
-<!--                            <report>report-integration</report>-->
-<!--                        </reports>-->
-<!--                    </reportSet>-->
-<!--                </reportSets>-->
-<!--            </plugin>-->
-
-<!--            <plugin>-->
-<!--                <groupId>org.apache.maven.plugins</groupId>-->
-<!--                <artifactId>maven-jxr-plugin</artifactId>-->
-<!--                <version>${maven-jxr-plugin.version}</version>-->
-<!--            </plugin>-->
-<!--            <plugin>-->
-<!--                <groupId>com.github.spotbugs</groupId>-->
-<!--                <artifactId>spotbugs-maven-plugin</artifactId>-->
-<!--                <version>4.7.3.2</version>-->
-<!--                <configuration>-->
-<!--                    <xmlOutput>true</xmlOutput>-->
-<!--                    &lt;!&ndash; Optional directory to put spotbugs xdoc xml report &ndash;&gt;-->
-<!--                    <xmlOutputDirectory>target/site</xmlOutputDirectory>-->
-<!--                </configuration>-->
-<!--            </plugin>-->
-<!--            <plugin>-->
-<!--                <groupId>org.apache.maven.plugins</groupId>-->
-<!--                <artifactId>maven-pmd-plugin</artifactId>-->
-<!--                <version>3.20.0</version>-->
-<!--            </plugin>-->
-<!--        </plugins>-->
-
-
     </reporting>
-
-
-
-<!--    <repositories>-->
-<!--        <repository>-->
-<!--            <releases>-->
-<!--                <enabled>true</enabled>-->
-<!--                <updatePolicy>always</updatePolicy>-->
-<!--                <checksumPolicy>warn</checksumPolicy>-->
-<!--            </releases>-->
-<!--            <snapshots>-->
-<!--                <enabled>true</enabled>-->
-<!--                <updatePolicy>always</updatePolicy>-->
-<!--                <checksumPolicy>fail</checksumPolicy>-->
-<!--            </snapshots>-->
-<!--            <name>tinkar-nexus</name>-->
-<!--            <id>tinkar-nexus</id>-->
-<!--            <url>https://nexus.build.tinkarbuild.com/repository/maven-public</url>-->
-<!--            <layout>default</layout>-->
-<!--        </repository>-->
-<!--    </repositories>-->
-
-<!--    <distributionManagement>-->
-<!--        <repository>-->
-<!--            <uniqueVersion>false</uniqueVersion>-->
-<!--            <id>tinkar-nexus-release</id>-->
-<!--            <name>tinkar-nexus-release</name>-->
-<!--            <url>https://nexus.build.tinkarbuild.com/repository/maven-releases/</url>-->
-<!--            <layout>default</layout>-->
-<!--        </repository>-->
-<!--        <snapshotRepository>-->
-<!--            <uniqueVersion>true</uniqueVersion>-->
-<!--            <id>tinkar-nexus-snap</id>-->
-<!--            <name>tinkar-nexus-snap</name>-->
-<!--            <url>https://nexus.build.tinkarbuild.com/repository/maven-snapshots/</url>-->
-<!--            <layout>default</layout>-->
-<!--        </snapshotRepository>-->
-<!--    </distributionManagement>-->
-
 
 </project>
