--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,8 @@
     <properties>
 
         <auto-service.version>1.0.1</auto-service.version>
-        <activej.version>4.3.0</activej.version>
+        <activej.version>4.3</activej.version>
+        <activej-launchers.version>4.3.1</activej-launchers.version>
         <build-helper-maven-plugin.version>3.2.0</build-helper-maven-plugin.version>
         <caffeine.version>3.1.1</caffeine.version>
         <eclipse-collections-api.version>11.1.0</eclipse-collections-api.version>
@@ -68,7 +69,7 @@
         <testng.version>7.4.0</testng.version>
         <tinkar-jpms-deps.groupId>dev.ikm.jpms</tinkar-jpms-deps.groupId>
         <tinkar-jpms-deps.version>1.0.15</tinkar-jpms-deps.version>
-        <protobuf-java.version>3.21.12</protobuf-java.version>
+        <protobuf-java.version>3.22.0</protobuf-java.version>
         <sonar.skip>false</sonar.skip>
         <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
         <sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
@@ -83,7 +84,6 @@
         <common-java5.version>3.0.0-M9</common-java5.version>
         <maven-jxr-plugin.version>3.3.0</maven-jxr-plugin.version>
         <maven-license-plugin.version>4.1</maven-license-plugin.version>
-        <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/target/site/jacoco-aggregate/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
 
         <tinkar-schema.version>1.5.0</tinkar-schema.version>
         <udaychandra-susel.version>0.1.2</udaychandra-susel.version>
@@ -315,7 +315,7 @@
             <dependency>
                 <groupId>io.activej</groupId>
                 <artifactId>activej-launchers-http</artifactId>
-                <version>${activej.version}</version>
+                <version>${activej-launchers.version}</version>
             </dependency>
 
             <dependency>
@@ -390,25 +390,21 @@
         <dependency>
             <groupId>${tinkar-jpms-deps.groupId}</groupId>
             <artifactId>auto-service</artifactId>
-            <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>org.junit.platform</groupId>
             <artifactId>junit-platform-commons</artifactId>
-            <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>org.junit.platform</groupId>
             <artifactId>junit-platform-launcher</artifactId>
-            <scope>test</scope>
         </dependency>
 
         <dependency>
@@ -435,19 +431,6 @@
                         <header>${basedir}/license.txt</header>
                     </configuration>
                 </plugin>
-
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-dependency-plugin</artifactId>
-                    <version>${maven-dependency-plugin.version}</version>
-                </plugin>
-
-                <plugin>
-                    <artifactId>maven-enforcer-plugin</artifactId>
-                    <version>3.0.0-M3</version>
-                </plugin>
-
-
             </plugins>
         </pluginManagement>
 
