fixing imports and problems with spinedarray module

--- a/provider/data-spinedarray-provider/pom.xml
+++ b/provider/data-spinedarray-provider/pom.xml
@@ -47,6 +47,16 @@
             <artifactId>entity-provider</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>${tinkar-jpms-deps.groupId}</groupId>
+            <artifactId>eclipse-collections-api</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>${tinkar-jpms-deps.groupId}</groupId>
+            <artifactId>eclipse-collections</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
