--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>dev.ikm.build</groupId>
         <artifactId>java-parent</artifactId>
-        <version>0.1.0-SNAPSHOT</version>
+        <version>0.3.0</version>
         <relativePath></relativePath>
     </parent>
 
@@ -47,29 +47,37 @@
     </modules>
 	    
     <properties>
-
+        <maven.javadoc.skip>true</maven.javadoc.skip>
+        <activej-bytebuf.version>4.3-r3</activej-bytebuf.version>
+        <activej-common.version>4.3-r2</activej-common.version>
         <auto-service.version>1.0.1</auto-service.version>
-        <activej.version>4.3</activej.version>
+        <activej.version>4.3-r3</activej.version>
         <activej-launchers.version>4.3.1</activej-launchers.version>
         <build-helper-maven-plugin.version>3.2.0</build-helper-maven-plugin.version>
-        <caffeine.version>3.1.1</caffeine.version>
-        <eclipse-collections-api.version>11.1.0</eclipse-collections-api.version>
+        <caffeine.version>3.1.1-r2</caffeine.version>
+        <eclipse-collections.version>11.1.0-r2</eclipse-collections.version>
+        <eclipse-collections-api.version>11.1.0-r3</eclipse-collections-api.version>
         <jetty-slf4j-impl.version>11.0.7</jetty-slf4j-impl.version>
         <jgrapht.version>1.5.0</jgrapht.version>
         <junit.version>5.6.3</junit.version>
-        <h2-mvstore.version>1.4.200</h2-mvstore.version>
+        <mvstore.version>1.4.200-r2</mvstore.version>
         <io.smallrye.reactive.version>1.3.1</io.smallrye.reactive.version>
-        <jheaps.version>0.14</jheaps.version>
+        <jheaps.version>0.14-r2</jheaps.version>
         <lucene.version>8.9.0</lucene.version>
+        <lucene-core.version>8.9.0-r2</lucene-core.version>
+        <lucene-highlighter.version>8.9.0-r2</lucene-highlighter.version>
+        <lucene-memory.version>8.9.0-r2</lucene-memory.version>
+        <lucene-queryparser.version>8.9.0-r2</lucene-queryparser.version>
+        <lucene-sandbox.version>8.9.0-r2</lucene-sandbox.version>
         <org.reactivestreams.version>1.0.3</org.reactivestreams.version>
         <record-builder-core.version>34</record-builder-core.version>
-        <roaringbitmap.version>0.9.31</roaringbitmap.version>
+        <roaringbitmap.version>0.9.31-r2</roaringbitmap.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <slf4j.version>2.0.0-alpha6</slf4j.version>
         <testng.version>7.4.0</testng.version>
         <tinkar-jpms-deps.groupId>dev.ikm.jpms</tinkar-jpms-deps.groupId>
         <tinkar-jpms-deps.version>1.0.15</tinkar-jpms-deps.version>
-        <protobuf-java.version>3.22.0</protobuf-java.version>
+        <protobuf-java.version>3.22.0-r2</protobuf-java.version>
         <sonar.skip>false</sonar.skip>
         <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
         <sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
@@ -91,6 +99,8 @@
         <junit-platform-launcher.version>1.7.0</junit-platform-launcher.version>
         <junit-jupiter-api.version>5.6.3</junit-jupiter-api.version>
         <common-java5.version>3.0.0-M9</common-java5.version>
+        <jacoco-maven-plugin.version>0.8.8</jacoco-maven-plugin.version>
+        <maven-dependency-plugin.version>3.5.0</maven-dependency-plugin.version>
     </properties>
 
     <!-- All Dependencies and versions used in this project are pre-defined here for use in modules -->
@@ -230,13 +240,13 @@
             <dependency>
                 <groupId>${tinkar-jpms-deps.groupId}</groupId>
                 <artifactId>activej-bytebuf</artifactId>
-                <version>${activej.version}</version>
+                <version>${activej-bytebuf.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>${tinkar-jpms-deps.groupId}</groupId>
                 <artifactId>activej-common</artifactId>
-                <version>${activej.version}</version>
+                <version>${activej-common.version}</version>
             </dependency>
 
             <dependency>
@@ -254,7 +264,7 @@
             <dependency>
                 <groupId>${tinkar-jpms-deps.groupId}</groupId>
                 <artifactId>eclipse-collections</artifactId>
-                <version>${eclipse-collections-api.version}</version>
+                <version>${eclipse-collections.version}</version>
             </dependency>
 
             <dependency>
@@ -266,31 +276,31 @@
             <dependency>
                 <groupId>${tinkar-jpms-deps.groupId}</groupId>
                 <artifactId>lucene-core</artifactId>
-                <version>${lucene.version}</version>
+                <version>${lucene-core.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>${tinkar-jpms-deps.groupId}</groupId>
                 <artifactId>lucene-highlighter</artifactId>
-                <version>${lucene.version}</version>
+                <version>${lucene-highlighter.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>${tinkar-jpms-deps.groupId}</groupId>
                 <artifactId>lucene-memory</artifactId>
-                <version>${lucene.version}</version>
+                <version>${lucene-memory.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>${tinkar-jpms-deps.groupId}</groupId>
                 <artifactId>lucene-queryparser</artifactId>
-                <version>${lucene.version}</version>
+                <version>${lucene-queryparser.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>${tinkar-jpms-deps.groupId}</groupId>
                 <artifactId>lucene-sandbox</artifactId>
-                <version>${lucene.version}</version>
+                <version>${lucene-sandbox.version}</version>
             </dependency>
 
             <dependency>
@@ -302,7 +312,7 @@
             <dependency>
                 <groupId>${tinkar-jpms-deps.groupId}</groupId>
                 <artifactId>mvstore</artifactId>
-                <version>${h2-mvstore.version}</version>
+                <version>${mvstore.version}</version>
             </dependency>
 
             <!-- Everything else -->
@@ -431,18 +441,13 @@
                         <header>${basedir}/license.txt</header>
                     </configuration>
                 </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-dependency-plugin</artifactId>
+                    <version>${maven-dependency-plugin.version}</version>
+                </plugin>
             </plugins>
         </pluginManagement>
-
-        <plugins>
-            <plugin>
-                <artifactId>maven-enforcer-plugin</artifactId>
-                <configuration>
-                    <skip>true</skip>
-                </configuration>
-            </plugin>
-
-        </plugins>
 
     </build>
 
