--- a/provider/data-websocket-server-provider/pom.xml
+++ b/provider/data-websocket-server-provider/pom.xml
@@ -14,6 +14,7 @@
     <name>TINKAR Provider Data - Websocket server</name>
 
     <properties>
+        <skipTests>true</skipTests>
         <activej.version>4.3</activej.version>
         <sonar.skip>false</sonar.skip>
         <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
