changed tinkar-schema version.

--- a/pom.xml
+++ b/pom.xml
@@ -93,7 +93,7 @@
         <maven-jxr-plugin.version>3.3.0</maven-jxr-plugin.version>
         <maven-license-plugin.version>4.1</maven-license-plugin.version>
 
-        <tinkar-schema.version>1.7.0-SNAPSHOT</tinkar-schema.version>
+        <tinkar-schema.version>1.7.0</tinkar-schema.version>
         <udaychandra-susel.version>0.1.2</udaychandra-susel.version>
         <junit-platform-commons.version>1.7.0</junit-platform-commons.version>
         <junit-platform-launcher.version>1.7.0</junit-platform-launcher.version>
