--- a/provider/data-websocket-server-provider/pom.xml
+++ b/provider/data-websocket-server-provider/pom.xml
@@ -14,10 +14,8 @@
     <name>TINKAR Provider Data - Websocket server</name>
 
     <properties>
+        <!--TODO this is a problem that needs to be addressed - but we do not have the code to do it -->
         <skipTests>true</skipTests>
-        <activej.version>4.3</activej.version>
-        <sonar.skip>false</sonar.skip>
-        <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
     </properties>
 
     <dependencies>
